--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-alura" src="alura1.png" alt="logo da alura start">
+        <img class="cabecalho-alura" src="Alura.png" alt="logo da alura start">
         <img class="cabecalho-imagem" src="IMG_7312.jpg" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
