--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <img class="cabecalho-alura" src="Alura.png" alt="logo da alura start">
         <img class="cabecalho-imagem" src="IMG_7312.jpg" alt="logo da alura start">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">BAILAINAS INTERNACIONAIS</li>
+            <li class="cabecalho-lista-item">BAILARINAS BRASILEIRAS</li>
         </ul>
     </header>
     <section class="escola">
