--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="davi1.jpeg" alt="foto do Davi">
-            <h3 class="estudante-nome">Davi Mendes</h3>
+            <img class="estudante-imagem" src="BELAADORMECIDA.jpg" alt="foto do BELA ADORMCIDA">
+            <h3 class="estudante-nome">BELA ADORMECIDA</h3>
             <a href="https://github.com/davimendesferraz"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/davi-mendes-ferraz-488ba22b3/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/dabepq?igsh=MW1tOWkyeW9jeWpuMw==&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
       
         <div class="estudante-div">
-            <img class="estudante-imagem" src="felipe.jpeg" alt="foto da joice">
-            <h3 class="estudante-nome">Felipe Pereira</h3>
+            <img class="estudante-imagem" src="RomeueJulieta.jpg" alt="foto da ROMEU E JULIETS">
+            <h3 class="estudante-nome">ROMEU E JULIETA</h3>
             <a href="https://github.com/PeboFds/FelipeP"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/felipe-pereira-6b116332b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/pebo_fds/?authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
