--- a/index.html
+++ b/index.html
@@ -67,30 +67,30 @@
             <a href="https://www.instagram.com/pebo_fds/?authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="gabriella.jpeg" alt="foto da maria">
-            <h3 class="estudante-nome">Gabriela Lacerda</h3>
+            <img class="estudante-imagem" src="CINDERELA.jpg" alt="foto da maria">
+            <h3 class="estudante-nome">CINDERELA</h3>
             <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-lacerda-rodrigues-04566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gablacerda?igsh=d2dyajkzZHJmamJo&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="isabeller.jpeg" alt="foto da olhe">
-            <h3 class="estudante-nome">Isabelle Ribeiro</h3>
+            <img class="estudante-imagem" src="COPPELIA.jpeg" alt="foto da olhe">
+            <h3 class="estudante-nome">COPPELIA</h3>
             <a href="https://github.com/isabelleribeiro10/Isabelleribeiro10.git"<img class="estudante-icone" src="github.png" alt="icone github">
             <a href="https://www.linkedin.com/feed/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/isabelle.rlopes?igsh=MjduMGNtb28wOW9o&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
        
         <div class="estudante-div">
-            <img class="estudante-imagem" src="jack.jpeg" alt="foto da rafa">
-            <h3 class="estudante-nome">Jack Almario</h3>
+            <img class="estudante-imagem" src="GARDEE.jpg" alt="foto da rafa">
+            <h3 class="estudante-nome">LA FILLE MAL GARDÉE</h3>
             <a href="https://github.com/jackk62/jackk62.git"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="joao.jpeg" alt="foto da thais">
-            <h3 class="estudante-nome">João Victor Guimarães</h3>
+            <img class="estudante-imagem" src="GISELLE.jpeg" alt="foto da thais">
+            <h3 class="estudante-nome">GISELLE</h3>
             <a href="https://github.com/BrisaJV"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/joao-ricchieiro-68b653322/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
