--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>variações de Ballet</title>
+    <title>Variações de Ballet</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,6 +47,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="BELAADORMECIDA.jpg" alt="foto do BELA ADORMCIDA">
+            <h3 class="estudande imagem">BELA ADORMECIDA</h3>
             <a href="https://youtu.be/w7qLg1lOfrw?si=SWkmc-3WHxvBoe7K"><img class="estudante-icone" src="youtube.png" alt="icone youtube"></a>
         </div>
       
